# pylie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pylie/: LieGroup.py  MR1.py  Quaternion.py  R3.py  S1.py  SE2.py  SE23.py  SE3.py  SIM3.py  SL2.py  SO3.py  SOT3.py  Trajectory.py  __init__.py  analysis.py  plotting.py
pylie/tests/: test_LieGroups.py
src/pylie/: LieGroup.py  MR1.py  O1_2.py  Quaternion.py  SE2.py  SE23.py  SE3.py  SIM3.py  SO3.py  Trajectory.py  __init__.py  analysis.py  plotting.py
tests/: test_LieGroups.py  test_analysis.py
