[project]
name = "pylie"
version = "0.1.0"
authors = [
  { name="Pieter van Goor", email="p.c.h.vangoor@utwente.nl" },
]
description = "Lie groups in Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pvangoor/pylie"
Issues = "https://github.com/pvangoor/pylie/issues"
