[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pylieg"
version = "0.2.1"
authors = [
  { name="Pieter van Goor", email="p.c.h.vangoor@utwente.nl" },
]
license = { file = "LICENSE" }
description = "Lie groups in Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["Lie", "Lie group", "Lie algebra", "matrix", "manifold", "geometry", "symmetry", "group"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/pvangoor/pylie"
Issues = "https://github.com/pvangoor/pylie/issues"

[tool.bumpver]
current_version = "0.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]